# mle-training-

./: .gitignore  README.md  code.py  env.yml  environment.yml  nonstandardcode.py  setup.cfg  setup.py
env/: pyvenv.cfg
env/Scripts/: activate.bat
housing.egg-info/: PKG-INFO
mle-dev/Scripts/: activate
mle-dev/conda-meta/: _libgcc_mutex-0.1-main.json  _openmp_mutex-5.1-1_gnu.json  ca-certificates-2022.4.26-h06a4308_0.json  certifi-2021.10.8-py39h06a4308_2.json  history  ld_impl_linux-64-2.38-h1181459_0.json  libffi-3.3-he6710b0_2.json  libgcc-ng-11.2.0-h1234567_0.json  libgomp-11.2.0-h1234567_0.json  libstdcxx-ng-11.2.0-h1234567_0.json  ncurses-6.3-h7f8727e_2.json  openssl-1.1.1o-h7f8727e_0.json  pip-21.2.4-py39h06a4308_0.json  python-3.9.12-h12debd9_0.json  readline-8.1.2-h7f8727e_1.json  setuptools-61.2.0-py39h06a4308_0.json  sqlite-3.38.3-hc218d9a_0.json  tk-8.6.11-h1ccaba5_1.json  tzdata-2022a-hda174b7_0.json  wheel-0.37.1-pyhd3eb1b0_0.json  xz-5.2.5-h7f8727e_1.json  zlib-1.2.12-h7f8727e_2.json
mle-dev/lib/: libcrypto.so.1.1  libtinfow.so.6.3  tclConfig.sh  tkConfig.sh
mle-dev/lib/itcl4.2.1/: itclConfig.sh
mle-dev/lib/pkgconfig/: formw.pc  libcrypto.pc  libffi.pc  liblzma.pc  libssl.pc  menuw.pc  ncursesw.pc  openssl.pc  panelw.pc  python-3.9-embed.pc  python-3.9.pc  readline.pc  sqlite3.pc  tcl.pc  tinfow.pc  tk.pc  zlib.pc
mle-dev/lib/python3.9/: _sysconfigdata__linux_x86_64-linux-gnu.py  _sysconfigdata__linux_x86_64-linux-gnu.py.orig  _sysconfigdata_x86_64_conda_cos6_linux_gnu.py  (+2 more)
notebooks/: MLE-Training Housing.ipynb
(+155 files in other folders)
